Destroy/DestroyKernel/kernel.h

EXPORT_FUNC GET_CONSOLE_ATTRIBUTE(HANDLE hConsoleOutput, WORD * foreColor, WORD * backColor);
EXPORT_FUNC SET_CONSOLE_ATTRIBUTE(HANDLE hConsoleOutput, WORD foreColor, WORD backColor);
EXPORT_FUNC GET_CONSOLE_CURSOR_INFO(HANDLE hConsoleOutput, BOOL * cursorVisible, DWORD * cursorSize);
EXPORT_FUNC SET_CONSOLE_CURSOR_INFO(HANDLE hConsoleOutput, BOOL cursorVisible, DWORD cursorSize);
EXPORT_FUNC GET_CONSOLE_CURSOR_POS(HANDLE hConsoleOutput, SHORT * x, SHORT * y);
EXPORT_FUNC SET_CONSOLE_CURSOR_POS(HANDLE hConsoleOutput, SHORT x, SHORT y);
EXPORT_FUNC READ_CONSOLE(HANDLE hConsoleInput, WCHAR * str, DWORD numberOfCharToRead, DWORD * read);
EXPORT_FUNC READ_CONSOLE_INPUT(HANDLE hConsoleInput, SHORT * mousePosX, SHORT * mousePosY);
EXPORT_FUNC FLUSH_CONSOLE_INPUT(HANDLE hConsoleInput);
EXPORT_FUNC WRITE_CONSOLE(HANDLE hConsoleOutput, wchar_t* charBuffer, DWORD numberOfCharsToWrite);
EXPORT_FUNC WRITE_CONSOLE_OUTPUT(HANDLE hConsoleOutput, CHAR_INFO * charInfos, SHORT x, SHORT y, SHORT width, SHORT height);
EXPORT_FUNC WRITE_CONSOLE_OUTPUT_CHAR(HANDLE hConsoleOutput, WCHAR * charBuffer, DWORD numberOfCharsToWrite, SHORT x, SHORT y);
EXPORT_FUNC WRITE_CONSOLE_OUTPUT_ATTRIBUTE(HANDLE hConsoleOutput, WORD * colors, DWORD numberOfColorsToWrite, SHORT x, SHORT y);
EXPORT_FUNC FILL_CONSOLE_OUTPUT_CHAR(HANDLE hConsoleOutput, WCHAR c, DWORD width, SHORT x, SHORT y);
EXPORT_FUNC FILL_CONSOLE_OUTPUT_ATTRIBUTE(HANDLE hConsoleOutput, WORD color, DWORD width, SHORT x, SHORT y);
EXPORT_FUNC GET_LARGEST_CONSOLE_WINDOW_SIZE(HANDLE hConsoleOutput, SHORT * width, SHORT * height);
EXPORT_FUNC SET_CONSOLE_CTRL_HANDLER(BOOL disable);
EXPORT_FUNC GET_KEY(int key);
EXPORT_FUNC START_TIMING(LONGLONG * freq, LONGLONG * start);
EXPORT_FUNC END_TIMING(LONGLONG freq, LONGLONG start, LONGLONG * timeCost);
EXPORT_FUNC SLEEP(DWORD milliSeconds);
EXPORT_FUNC CLOSE_HANDLE(HANDLE handle);