Destroy/Destroy/Kernel/KERNEL.cs


        /// <summary>
        /// 获取控制台特性
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="foreColor">前景色</param>
        /// <param name="backColor">背景色</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool GET_CONSOLE_ATTRIBUTE(IntPtr hConsoleOutput, out ushort foreColor, out ushort backColor);

        /// <summary>
        /// 设置控制台特性
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="foreColor">前景色</param>
        /// <param name="backColor">背景色</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool SET_CONSOLE_ATTRIBUTE(IntPtr hConsoleOutput, ushort foreColor, ushort backColor);

        /// <summary>
        /// 获取控制台光标信息
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="cursorVisible">光标可见性</param>
        /// <param name="cursorSize">光标尺寸(1-100)</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool GET_CONSOLE_CURSOR_INFO(IntPtr hConsoleOutput, out bool cursorVisible, out uint cursorSize);

        /// <summary>
        /// 设置控制台光标信息
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="cursorVisible">光标可见性</param>
        /// <param name="cursorSize">光标尺寸(1-100)</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool SET_CONSOLE_CURSOR_INFO(IntPtr hConsoleOutput, bool cursorVisible, uint cursorSize);

        /// <summary>
        /// 获取光标坐标
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="x">横向坐标</param>
        /// <param name="y">纵向坐标</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool GET_CONSOLE_CURSOR_POS(IntPtr hConsoleOutput, out short x, out short y);

        /// <summary>
        /// 设置光标坐标
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="x">横向坐标</param>
        /// <param name="y">纵向坐标</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool SET_CONSOLE_CURSOR_POS(IntPtr hConsoleOutput, short x, short y);

        /// <summary>
        /// 读取控制台
        /// </summary>
        /// <param name="hConsoleInput">控制台标准输入句柄</param>
        /// <param name="str">字符串指针</param>
        /// <param name="numberOfCharToRead">要读取的字符数</param>
        /// <param name="read">实际读取的字符数</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool READ_CONSOLE(IntPtr hConsoleInput, ref byte str, uint numberOfCharToRead, out uint read);

        /// <summary>
        /// 读取控制台输入(请开启控制台输入模式EnableWindowInput和EnableQuickEditMode)
        /// </summary>
        /// <param name="hConsoleInput">控制台标准输入句柄</param>
        /// <param name="mousePosX">相对于左边的值</param>
        /// <param name="mousePosY">相对于上边的值</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool READ_CONSOLE_INPUT(IntPtr hConsoleInput, out short mousePosX, out short mousePosY);

        /// <summary>
        /// 清空控制台输入
        /// </summary>
        /// <param name="hConsoleInput">控制台输入句柄</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool FLUSH_CONSOLE_INPUT(IntPtr hConsoleInput);

        /// <summary>
        /// 写入控制台
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="charBuffer">字符串</param>
        /// <param name="numberOfCharsToWrite">字符串长度</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL, CharSet = CharSet.Unicode)]
        public static extern bool WRITE_CONSOLE(IntPtr hConsoleOutput, string charBuffer, uint numberOfCharsToWrite);

        /// <summary>
        /// 写入控制台输出
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="charInfos">字符信息数组</param>
        /// <param name="x">横向坐标(英文字母宽度)</param>
        /// <param name="y">纵向坐标</param>
        /// <param name="width">宽度(英文字母宽度)</param>
        /// <param name="height">高度</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool WRITE_CONSOLE_OUTPUT(IntPtr hConsoleOutput, CharInfo[] charInfos, short x, short y, short width, short height);

        /// <summary>
        /// 写入控制台输出字符
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="charBuffer">字符串</param>
        /// <param name="numberOfCharsToWrite">字符串长度</param>
        /// <param name="x">横向坐标</param>
        /// <param name="y">纵向坐标</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL, CharSet = CharSet.Unicode)]
        public static extern bool WRITE_CONSOLE_OUTPUT_CHAR(IntPtr hConsoleOutput, string charBuffer, uint numberOfCharsToWrite, short x, short y);

        /// <summary>
        /// 打印屏幕特性
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="colors">颜色数组</param>
        /// <param name="numberOfColorsToWrite">颜色数组的长度</param>
        /// <param name="x">横向坐标</param>
        /// <param name="y">纵向坐标</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool WRITE_CONSOLE_OUTPUT_ATTRIBUTE(IntPtr hConsoleOutput, ushort[] colors, uint numberOfColorsToWrite, short x, short y);

        /// <summary>
        /// 填充屏幕字符
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="c">填充的字符</param>
        /// <param name="width">填充的宽度</param>
        /// <param name="x">横向坐标</param>
        /// <param name="y">纵向坐标</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL, CharSet = CharSet.Unicode)]
        public static extern bool FILL_CONSOLE_OUTPUT_CHAR(IntPtr hConsoleOutput, char c, uint width, short x, short y);

        /// <summary>
        /// 填充屏幕特性
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="color">填充的颜色</param>
        /// <param name="width">填充的宽度</param>
        /// <param name="x">横向坐标</param>
        /// <param name="y">纵向坐标</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool FILL_CONSOLE_OUTPUT_ATTRIBUTE(IntPtr hConsoleOutput, ushort color, uint width, short x, short y);

        /// <summary>
        /// 获取控制台窗口可以设置的最大尺寸
        /// </summary>
        /// <param name="hConsoleOutput">控制台标准输出句柄</param>
        /// <param name="width">最大宽度</param>
        /// <param name="height">最大高度</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool GET_LARGEST_CONSOLE_WINDOW_SIZE(IntPtr hConsoleOutput, out short width, out short height);

        /// <summary>
        /// 设置控制台Ctrl+C信号处理
        /// </summary>
        /// <param name="disable">禁用</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool SET_CONSOLE_CTRL_HANDLER(bool disable);

        #endregion

        #region Other

        /// <summary>
        /// 获取按键输入
        /// </summary>
        /// <param name="key">按键</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool GET_KEY(int key);

        /// <summary>
        /// 开始计时
        /// </summary>
        /// <param name="freq">频率</param>
        /// <param name="start">开始时间</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool START_TIMING(out long freq, out long start);

        /// <summary>
        /// 结束计时
        /// </summary>
        /// <param name="freq">频率</param>
        /// <param name="start">开始时间</param>
        /// <param name="timeCost">花费时间(单位:ms)</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool END_TIMING(long freq, long start, out long timeCost);

        /// <summary>
        /// 睡眠指定毫秒
        /// </summary>
        /// <param name="milliSeconds">毫秒(ms)</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool SLEEP(uint milliSeconds);

        /// <summary>
        /// 关闭句柄
        /// </summary>
        /// <param name="handle">句柄</param>
        /// <returns>是否成功</returns>
        [DllImport(DESTROY_KERNEL)]
        public static extern bool CLOSE_HANDLE(IntPtr handle);

        #endregion
    }
}